fix : z-index로 인한 header 미작동

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ header {
     justify-self: flex-start;
     border-bottom: 2px solid black;
     align-items: center;
-    z-index: -1;
 }
 
 header p {
